--- a/style.css
+++ b/style.css
@@ -9,6 +9,7 @@ body {
     background-image: linear-gradient(120deg, #f6d365, #fda085);
     color: white;
     min-height: 100vh;
+    width: 100%;
 }
 
 header {
@@ -17,6 +18,7 @@ header {
 
 header,
 form {
+    margin: 0, 1rem;
     min-height: 20vh;
     display: flex;
     justify-content: center;
@@ -63,6 +65,7 @@ form button:hover {
     display: flex;
     justify-content: space-between;
     align-items: center;
+    transition: all .5s ease;
 }
 
 .todo li {
@@ -90,4 +93,53 @@ form button:hover {
 .fa-trash,
 .fa-check {
     pointer-events: none;
+}
+
+.completed {
+    text-decoration: line-through;
+    opacity: 0.5;
+}
+
+.fall {
+    transform: translateY(8rem) rotateZ(25deg);
+    opacity: 0;
+}
+
+select {
+    -webkit-appearance: none;
+    -moz-appearance: none;
+    appearance: none;
+    outline: none;
+    border: none;
+    color: #fda085;
+    cursor: pointer;
+    padding: 1rem;
+}
+
+.select {
+    min-width: 5rem;
+    margin: 1rem;
+    position: relative;
+    overflow: hidden;
+}
+
+select option {
+    font-family: 'Poppins', sans-serif;
+}
+
+.select::after {
+    content: "\25BC";
+    position: absolute;
+    color: #fda085;
+    background: white;
+    right: 0;
+    top: 0;
+    padding: 1rem;
+    pointer-events: none;
+    transition: all 0.3s ease;
+}
+
+.select:hover::after {
+    color: white;
+    background: #fda085;
 }
