--- a/style.css
+++ b/style.css
@@ -6,10 +6,15 @@
 
 body {
     font-family: 'Poppins', sans-serif;
-    background-image: linear-gradient(120deg, #f6d365, #fda085);
+    background: linear-gradient(120deg, #f6d365, #fda085) no-repeat;
     color: white;
     min-height: 100vh;
-    width: 100%;
+}
+
+.container {
+    margin: 0 2rem;
+    display: flex;
+    flex-direction: column;
 }
 
 header {
@@ -18,7 +23,6 @@ header {
 
 header,
 form {
-    margin: 0, 1rem;
     min-height: 20vh;
     display: flex;
     justify-content: center;
